--- a/public/style.css
+++ b/public/style.css
@@ -471,8 +471,9 @@ footer {
 }
 
 .content-prod {
-  height: 40vh;
+  /* height: 40vh; */
   margin: 0rem 5rem 0rem 5rem;
+  padding: 2rem 0;
 }
 
 .prod {
@@ -566,6 +567,7 @@ footer {
 }
 
 .content-livro {
+  width: 300px;
   position: relative;
   overflow: hidden;
   border: solid 3px var(--cor-branco-cinza);
@@ -633,7 +635,8 @@ footer {
 
 .index-conteudo {
   margin: 5px auto;
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
   justify-content: space-between;
   background-color: var(--cor-preto);
   border: solid 3px var(--cor-branco-claro);
@@ -913,6 +916,8 @@ menu-hamburger
   height: 100%;
   z-index: 999;
   background-color: var(--cor-azul-escuro-contraste);
+  display: grid;
+  grid-template-rows: 1fr 2rem;
 }
 
 a {
@@ -1348,7 +1353,9 @@ a {
   background-color: #5c0067;
 }
 
-li {
+.health-container li,
+.dice-system .container ul li,
+.ul-ficha li {
   margin: 20px 0;
   display: flex;
   align-items: center;
@@ -2021,15 +2028,47 @@ li {
   grid-template-areas: 
   "col01 col01 col01"
   "col02 col03 col04";
+  width: 70%;
+  margin: 0 auto;
 }
 
 .noticia-1{
   grid-area: col01;
 }
 
-.noticia-2{
+.noticia-1 h1{
+  padding: 2rem 0;
+  font-size: 3rem;
+}
 
+.news_one{
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  border: solid 5px var(--cor-branco-cinza);
+  padding: 10px;
+  color: white;
+  background-color: #000769;
+}
+
+.news_two{
+  border: solid 5px var(--cor-branco-cinza);
   grid-area: col02;
+  padding: 10px;
+  color: white;
+  background-color: #000769;
+}
+
+.news_three {
+  border: solid 5px var(--cor-branco-cinza);
+  padding: 10px;
+  color: white;
+  background-color: #000769;
+}
+
+.news_four{
+  border: solid 5px var(--cor-branco-cinza);
+  color: white;
+  background-color: #000769;
 }
 
 .noticia-3{
@@ -2040,4 +2079,12 @@ li {
 .noticia-4{
   grid-area: col04;
 
+}
+
+.back_noticias {
+  background-color: var(--cor-azul-escuro-contraste);
+}
+
+.news_style {
+  color: white;
 }
