--- a/src/views/components/header.ejs
+++ b/src/views/components/header.ejs
@@ -12,7 +12,8 @@
             <a href="/ficha">Sua Ficha</a>
           </div>
         </li>
-        <li></li>
+      </ul>
+      <ul>
         <li><a href="/logout">Sair</a></li>
       </ul>
     </nav>
@@ -20,7 +21,7 @@
       <ul>
         <li><a href="/index">Home</a></li>
         <li><a href="/noticias">Notícias</a></li>
-        <li><a href="/produtos">Produtos</a></li>
+        <li><a href="/produtos">PDFs</a></li>
         <li><a href="/compra">compra</a></li>
         <li><a href="/poscompra">Pós Compra</a></li>
       </ul>
