--- a/src/views/noticias.ejs
+++ b/src/views/noticias.ejs
@@ -14,13 +14,12 @@
       <div class="slider-wrapper">
         <div class="slider">
           <div class="news-item">
-            <img src="img/anime-8788959_1920.jpg" alt="Notícia 1" />
+            <img src="img/1.jpg" alt="Notícia 1" />
             <div class="news-text">
               <h2>
-                Notícia de Destaque: entenda o processo de adaptação do universo
-                Ordem Paranormal
+                Nasa lança jogo RPG de tabuleiro gratuito; veja como funciona
               </h2>
-              <p>Criado por Cellbit, a Ordem Paranormal ganhou destaque...</p>
+              <p>"The Lost Universe" é adaptável a outras mesas de RPG e convida os jogadores a aprender sobre o espaço enquanto se divertem</p>
               <a
                 href="https://g1.globo.com/rs/rio-grande-do-sul/noticia/2023/12/22/live-quadrinho-cellbit.ghtml"
                 class="btn"
@@ -29,37 +28,41 @@
             </div>
           </div>
           <div class="news-item">
-            <img src="img/anime-8788959_1920.jpg" alt="Notícia 2" />
+            <img src="img/2.jpg" alt="Notícia 2" />
             <div class="news-text">
-              <h2>Notícia 2</h2>
-              <p>Resumo da segunda notícia. Clique para saber mais!</p>
-              <a href="https://example.com/news2" class="btn">Clique aqui</a>
+              <h2>“Tem todas as qualidades dos filmes dos anos 1980”, diz Chris Pine sobre “Dungeons & Dragons”</h2>
+              <p>Baseado no jogo de RPG, o longa estreia nos cinemas brasileiros nesta quinta-feira (13)</p>
+              <a href="https://www.cnnbrasil.com.br/entretenimento/tem-todas-as-qualidades-dos-filmes-dos-anos-1980-diz-chris-pine-sobre-dungeons-dragons/" class="btn">Clique aqui</a>
             </div>
           </div>
           <div class="news-item">
             <img
-              src="https://via.placeholder.com/800x400/555555"
+              src="img/3.jpg"
               alt="Notícia 3"
             />
             <div class="news-text">
-              <h2>Notícia 3</h2>
-              <p>Resumo da terceira notícia. Clique para saber mais!</p>
-              <a href="https://example.com/news3" class="btn">Clique aqui</a>
+              <h2>Guia do Mestre 2024: entenda o novo livro de Dungeons & Dragons</h2>
+              <p>Chegou a vez de o Guia do Mestre migrar para o mundo novo de Dungeons & Dragons 2024.</p>
+              <a href="https://movimentorpg.com.br/guia-do-mestre-2024-entenda-o-novo-livro-de-dungeons-dragons/" class="btn">Clique aqui</a>
             </div>
           </div>
         </div>
       </div>
       <button class="nav next">&#10095;</button>
     </div>
+    <div class="back_noticias">
     <section>
-      <div class="container__noticias">
-        <div class="noticia-1">
-            <ul><li><img src="/img/lula.jpg" /></li><div>AKSDKASDKASK</div></ul></div>
-        <div class="noticia-2"><ul><li><img src="/img/rebelde.jpg" /></li><div>KAKASKDKASDKASKD</div></ul></div>
-        <div class="noticia-3"><ul><li><img src="/img/militar.jpg" /></li><div>KAKASKDKASDKASKD</div></ul></div>
-        <div class="noticia-4"><ul><li><img src="/img/jogo.jpg" /></li><div>KAKASKDKASDKASKD</div></ul></div>
-      </div>
+      <% pages.forEach(page => { %> <% if (page.position_name === 'noticias') {
+      %> <%- page.page_content %> <% } %> <% }) %>
     </section>
+    <p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+  </div>
+  
     <%- include('components/footer') %>
   </body>
 </html>
